# aisecuritygateway

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
.github/profile/: README.md
config/: gateway.yaml  providers.json
docs/api/: openapi.yaml  postman-collection.json
presidio/: .env.example  Dockerfile  recognizers.yaml  requirements.txt
presidio/app/: main.py  models.py  post_processor.py  recognizers.py
presidio/tests/: test_sovereign_safety.py
proxy-api/: .env.example  Dockerfile  requirements.txt
proxy-api/app/: auth.py  config.py  dlp.py  log_utils.py  main.py  models.py  providers.py
proxy-api/app/routers/: health.py  proxy.py
proxy-api/tests/: conftest.py  test_auth.py  test_config.py  test_dlp.py  test_health.py  test_log_utils.py  test_models.py  test_proxy.py
sdk/python/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
sdk/python/aisg/: __init__.py  client.py  exceptions.py  models.py
sdk/python/tests/: test_client.py  test_models.py
