[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aisg"
dynamic = ["version"]
description = "Python SDK for AI Security Gateway — PII redaction, prompt injection defense, and smart routing for any LLM."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Datum Fuse LLC", email = "contact@aisecuritygateway.ai" },
]
keywords = [
    "ai",
    "llm",
    "security",
    "pii",
    "dlp",
    "proxy",
    "openai",
    "gateway",
    "redaction",
    "governance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://aisecuritygateway.ai"
Documentation = "https://aisecuritygateway.ai/docs"
Repository = "https://github.com/aisecuritygateway/aisecuritygateway"
Issues = "https://github.com/aisecuritygateway/aisecuritygateway/issues"
Changelog = "https://github.com/aisecuritygateway/aisecuritygateway/blob/main/sdk/python/CHANGELOG.md"

[tool.hatch.version]
path = "aisg/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["aisg"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.9"
